# Telco-Churn-Prediction-Retention-ml

./: README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
artifacts/: feature_defaults.json  feature_schema.json
data_processed/: final_dataset.parquet
models/: logistic_telco_model.pkl  xgb_telco_model.pkl
notebook/: Telco_churn_project.ipynb  project_notebook.ipynb
reports/: feature_importance_logistic.csv  feature_importance_xgboost.csv  metrics.json  model_comparison.csv  retention_policy_table.csv  retention_scenarios.csv  threshold_metrics.csv
src/: cleaning.py  config.py  data_loader.py  evaluation.py  features.py  models.py  predict.py  preprocessing.py  run_pipeline.py
