[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churnguard-mlops"
version = "0.1.0"
description = "End-to-end customer churn prediction system with training pipeline, explainability, and FastAPI deployment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nihar Nandala" }
]
keywords = [
  "machine-learning",
  "customer-churn",
  "mlops",
  "fastapi",
  "scikit-learn",
  "xgboost",
  "classification"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "xgboost>=2.0.0",
  "joblib>=1.3.0",
  "pyyaml>=6.0.1",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "shap>=0.44.0",
  "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "flake8>=7.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
testpaths = [
  "tests"
]